# api/api.pb.go
@@ -42,11 +42,13 @@ var _ = math.Inf
 const _ = proto.ProtoPackageIsVersion2 // please upgrade the proto package
 
 type FunctionInfo struct {
-	ID    string `protobuf:"bytes,1,opt,name=ID" json:"ID,omitempty"`
-	Name  string `protobuf:"bytes,2,opt,name=Name" json:"Name,omitempty"`
-	Type  string `protobuf:"bytes,3,opt,name=Type" json:"Type,omitempty"`
-	Cmd   string `protobuf:"bytes,4,opt,name=Cmd" json:"Cmd,omitempty"`
-	Error string `protobuf:"bytes,5,opt,name=Error" json:"Error,omitempty"`
+	ID         string   `protobuf:"bytes,1,opt,name=ID" json:"ID,omitempty"`
+	Name       string   `protobuf:"bytes,2,opt,name=Name" json:"Name,omitempty"`
+	Type       string   `protobuf:"bytes,3,opt,name=Type" json:"Type,omitempty"`
+	Cmd        []string `protobuf:"bytes,4,rep,name=Cmd" json:"Cmd,omitempty"`
+	Error      string   `protobuf:"bytes,5,opt,name=Error" json:"Error,omitempty"`
+	Env        []string `protobuf:"bytes,6,rep,name=Env" json:"Env,omitempty"`
+	Privileged bool     `protobuf:"varint,7,opt,name=Privileged" json:"Privileged,omitempty"`
 }
 
 func (m *FunctionInfo) Reset()                    { *m = FunctionInfo{} }
@@ -75,11 +77,11 @@ func (m *FunctionInfo) GetType() string {
 	return ""
 }
 
-func (m *FunctionInfo) GetCmd() string {
+func (m *FunctionInfo) GetCmd() []string {
 	if m != nil {
 		return m.Cmd
 	}
-	return ""
+	return nil
 }
 
 func (m *FunctionInfo) GetError() string {
@@ -87,6 +89,20 @@ func (m *FunctionInfo) GetError() string {
 		return m.Error
 	}
 	return ""
+}
+
+func (m *FunctionInfo) GetEnv() []string {
+	if m != nil {
+		return m.Env
+	}
+	return nil
+}
+
+func (m *FunctionInfo) GetPrivileged() bool {
+	if m != nil {
+		return m.Privileged
+	}
+	return false
 }
 
 type AddRequest struct {
@@ -459,37 +475,39 @@ var _MufaasService_serviceDesc = grpc.ServiceDesc{
 func init() { proto.RegisterFile("api.proto", fileDescriptor0) }
 
 var fileDescriptor0 = []byte{
-	// 503 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x53, 0xdd, 0x6a, 0xdb, 0x30,
-	0x14, 0xc6, 0x76, 0x62, 0x9a, 0x13, 0x27, 0x6d, 0x95, 0x2e, 0x78, 0x61, 0x17, 0x45, 0x50, 0x18,
-	0xbd, 0xa8, 0x59, 0x37, 0x18, 0xeb, 0x4d, 0x17, 0xda, 0x86, 0x05, 0xf6, 0x03, 0xca, 0x2e, 0x77,
-	0xa3, 0xc5, 0x6a, 0x30, 0x24, 0x92, 0x27, 0xcb, 0x81, 0x32, 0x76, 0xb3, 0x57, 0xd8, 0x13, 0xec,
-	0x99, 0xf6, 0x0a, 0x7b, 0x90, 0xa1, 0x23, 0x79, 0x49, 0x58, 0x2f, 0x46, 0xef, 0xce, 0xf9, 0x24,
-	0x7d, 0xdf, 0x77, 0xce, 0x67, 0x43, 0x87, 0x97, 0xc5, 0x59, 0xa9, 0x95, 0x51, 0x24, 0xe2, 0x65,
-	0x31, 0x7a, 0xb2, 0x50, 0x6a, 0xb1, 0x14, 0x19, 0x2f, 0x8b, 0x8c, 0x4b, 0xa9, 0x0c, 0x37, 0x85,
-	0x92, 0x95, 0xbb, 0x42, 0x25, 0x24, 0x93, 0x5a, 0xce, 0x2d, 0x34, 0x95, 0xb7, 0x8a, 0xf4, 0x21,
-	0x9c, 0x5e, 0xa7, 0xc1, 0x71, 0xf0, 0xb4, 0xc3, 0xc2, 0xe9, 0x35, 0x21, 0xd0, 0x7a, 0xcf, 0x57,
-	0x22, 0x0d, 0x11, 0xc1, 0xda, 0x62, 0x1f, 0xef, 0x4a, 0x91, 0x46, 0x0e, 0xb3, 0x35, 0x39, 0x80,
-	0xe8, 0x6a, 0x95, 0xa7, 0x2d, 0x84, 0x6c, 0x49, 0x8e, 0xa0, 0x7d, 0xa3, 0xb5, 0xd2, 0x69, 0x1b,
-	0x31, 0xd7, 0x50, 0x0e, 0x30, 0xce, 0x73, 0x26, 0xbe, 0xd4, 0xa2, 0x32, 0xe4, 0x04, 0x5a, 0x56,
-	0x15, 0xf5, 0xba, 0xe7, 0x87, 0x67, 0xd6, 0xfa, 0xb6, 0x1d, 0x86, 0xc7, 0x64, 0x08, 0xf1, 0x4c,
-	0xd5, 0x7a, 0xee, 0x6c, 0x24, 0xcc, 0x77, 0x56, 0x62, 0xba, 0xe2, 0x8b, 0xc6, 0x89, 0x6b, 0xe8,
-	0x0b, 0xe8, 0xa2, 0x44, 0x55, 0x2a, 0x59, 0x89, 0xff, 0xd4, 0xa0, 0xaf, 0xa0, 0xc7, 0xc4, 0x4a,
-	0xad, 0x45, 0xe3, 0xad, 0x99, 0x3c, 0x38, 0x8e, 0xfe, 0x4e, 0x7e, 0x04, 0xed, 0x89, 0x6a, 0x7c,
-	0xec, 0x31, 0xd7, 0xd0, 0x31, 0xf4, 0x9b, 0xa7, 0x5e, 0x33, 0x83, 0x4e, 0x23, 0x51, 0x21, 0xc1,
-	0xbd, 0xc2, 0x9b, 0x3b, 0xf4, 0x04, 0xba, 0x6f, 0x8b, 0xca, 0x34, 0xda, 0x43, 0x88, 0x27, 0xc5,
-	0xd2, 0x08, 0xed, 0xd5, 0x7d, 0x47, 0x2f, 0x21, 0x71, 0xd7, 0x1e, 0xaa, 0xf3, 0x09, 0x80, 0xd5,
-	0xf2, 0xdf, 0x11, 0x77, 0xc2, 0x1d, 0xeb, 0x45, 0x95, 0x86, 0x6e, 0x6c, 0x5b, 0xdb, 0x70, 0x6f,
-	0xe4, 0x3a, 0x8d, 0x10, 0xb2, 0xa5, 0x5d, 0xc4, 0xcc, 0xe4, 0x85, 0xc4, 0xc0, 0x13, 0xe6, 0x1a,
-	0xfa, 0x12, 0xba, 0xc8, 0xee, 0xdd, 0x0d, 0x21, 0xfe, 0x50, 0x9b, 0xb2, 0x36, 0x28, 0x90, 0x30,
-	0xdf, 0x21, 0x9d, 0xd6, 0x3e, 0x4b, 0x5b, 0x9e, 0xff, 0x0c, 0xa1, 0xf7, 0xae, 0xbe, 0xe5, 0xbc,
-	0x9a, 0x09, 0xbd, 0x2e, 0xe6, 0x82, 0x5c, 0x42, 0x34, 0xce, 0x73, 0xb2, 0x8f, 0xd3, 0x6c, 0xbe,
-	0x98, 0xd1, 0xc1, 0x06, 0x70, 0x2a, 0xf4, 0xd1, 0xf7, 0x5f, 0xbf, 0x7f, 0x84, 0xfb, 0x14, 0xb2,
-	0xf5, 0xb3, 0x2c, 0x17, 0xe5, 0x52, 0xdd, 0x5d, 0x04, 0xa7, 0xe4, 0x0d, 0xc4, 0x2e, 0x14, 0x42,
-	0xf0, 0xc9, 0x4e, 0xb8, 0xa3, 0xc1, 0x0e, 0x76, 0x1f, 0x93, 0xc6, 0x33, 0xcb, 0xf4, 0x1a, 0x5a,
-	0x76, 0xe9, 0xc4, 0x49, 0x6f, 0xc5, 0x34, 0x3a, 0xdc, 0x42, 0x3c, 0xc7, 0x00, 0x39, 0x7a, 0x74,
-	0xcf, 0x72, 0x2c, 0x8b, 0xca, 0x58, 0x86, 0x2b, 0x88, 0x58, 0x2d, 0xfd, 0x30, 0x9b, 0xfd, 0xfb,
-	0x61, 0xb6, 0x56, 0x46, 0x1f, 0xe3, 0xf3, 0x01, 0xed, 0xa3, 0x85, 0x5a, 0x66, 0x5f, 0x6d, 0x28,
-	0xdf, 0x2e, 0x82, 0xd3, 0xcf, 0x31, 0xfe, 0xb0, 0xcf, 0xff, 0x04, 0x00, 0x00, 0xff, 0xff, 0xb1,
-	0x25, 0x80, 0xc2, 0xe0, 0x03, 0x00, 0x00,
+	// 533 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x53, 0xcb, 0x6a, 0xdb, 0x4c,
+	0x14, 0x46, 0x92, 0xad, 0xdf, 0x3e, 0xbe, 0x24, 0x19, 0xfb, 0x37, 0xaa, 0x29, 0xc5, 0x0c, 0x04,
+	0x4c, 0x16, 0x11, 0x4d, 0x0b, 0xa5, 0xd9, 0xa4, 0x26, 0xb1, 0xa9, 0xa1, 0x37, 0xc6, 0x5d, 0x76,
+	0xa3, 0x5a, 0x13, 0x33, 0x60, 0xcf, 0xa8, 0xa3, 0x91, 0x20, 0x94, 0x6e, 0xfa, 0x0a, 0x7d, 0x81,
+	0xf6, 0x99, 0xfa, 0x0a, 0x7d, 0x90, 0x32, 0x17, 0x61, 0x99, 0x66, 0x51, 0xba, 0x3b, 0xe7, 0xf8,
+	0xcc, 0x77, 0x39, 0x9f, 0x0c, 0xed, 0x24, 0x63, 0xe7, 0x99, 0x14, 0x4a, 0xa0, 0x20, 0xc9, 0xd8,
+	0xf8, 0xe1, 0x46, 0x88, 0xcd, 0x96, 0xc6, 0x49, 0xc6, 0xe2, 0x84, 0x73, 0xa1, 0x12, 0xc5, 0x04,
+	0xcf, 0xed, 0x0a, 0xfe, 0xee, 0x41, 0x77, 0x51, 0xf0, 0xb5, 0x9e, 0x2d, 0xf9, 0xad, 0x40, 0x7d,
+	0xf0, 0x97, 0x37, 0x91, 0x37, 0xf1, 0xa6, 0x6d, 0xe2, 0x2f, 0x6f, 0x10, 0x82, 0xc6, 0x9b, 0x64,
+	0x47, 0x23, 0xdf, 0x4c, 0x4c, 0xad, 0x67, 0xef, 0xef, 0x32, 0x1a, 0x05, 0x76, 0xa6, 0x6b, 0x74,
+	0x0c, 0xc1, 0xf5, 0x2e, 0x8d, 0x1a, 0x93, 0x60, 0xda, 0x26, 0xba, 0x44, 0x43, 0x68, 0xce, 0xa5,
+	0x14, 0x32, 0x6a, 0x9a, 0x35, 0xdb, 0xe8, 0xbd, 0x39, 0x2f, 0xa3, 0xd0, 0xee, 0xcd, 0x79, 0x89,
+	0x1e, 0x01, 0xbc, 0x93, 0xac, 0x64, 0x5b, 0xba, 0xa1, 0x69, 0xf4, 0xdf, 0xc4, 0x9b, 0xb6, 0x48,
+	0x6d, 0x82, 0x13, 0x80, 0x59, 0x9a, 0x12, 0xfa, 0xa9, 0xa0, 0xb9, 0x42, 0xa7, 0xd0, 0xd0, 0x3a,
+	0x8d, 0xc2, 0xce, 0xc5, 0xc9, 0xb9, 0x76, 0x5b, 0x37, 0x40, 0xcc, 0xcf, 0x68, 0x04, 0xe1, 0x4a,
+	0x14, 0x72, 0x6d, 0x85, 0x77, 0x89, 0xeb, 0xb4, 0xa8, 0xe5, 0x2e, 0xd9, 0x54, 0xda, 0x6d, 0x83,
+	0x9f, 0x42, 0xc7, 0x50, 0xe4, 0x99, 0xe0, 0x39, 0xfd, 0x4b, 0x0e, 0xfc, 0x1c, 0x7a, 0x84, 0xee,
+	0x44, 0x49, 0x2b, 0x6d, 0xd5, 0xad, 0x3c, 0x63, 0xce, 0xde, 0x6a, 0x08, 0xcd, 0x85, 0xa8, 0x74,
+	0xb4, 0x88, 0x6d, 0xf0, 0x0c, 0xfa, 0xd5, 0x53, 0xc7, 0x19, 0x43, 0xbb, 0xa2, 0xc8, 0x0d, 0xc0,
+	0xbd, 0xc4, 0xfb, 0x1d, 0x7c, 0x0a, 0x9d, 0x57, 0x2c, 0x57, 0x15, 0xf7, 0x08, 0xc2, 0x05, 0xdb,
+	0x2a, 0x2a, 0x1d, 0xbb, 0xeb, 0xf0, 0x15, 0x74, 0xed, 0xda, 0xbf, 0xf2, 0x7c, 0x00, 0x20, 0x05,
+	0xff, 0xd3, 0xe2, 0xc1, 0xe7, 0x30, 0x93, 0x9b, 0x3c, 0xf2, 0xad, 0x6d, 0x5d, 0x57, 0x31, 0x07,
+	0xfb, 0x98, 0x87, 0xd0, 0x5c, 0xa9, 0x94, 0xf1, 0xa8, 0x61, 0x02, 0xb1, 0x0d, 0x7e, 0x06, 0x1d,
+	0x83, 0xee, 0xd4, 0x8d, 0x20, 0x7c, 0x5b, 0xa8, 0xac, 0x50, 0x86, 0xa0, 0x4b, 0x5c, 0x67, 0xe0,
+	0xa4, 0x74, 0x59, 0xea, 0xf2, 0xe2, 0x87, 0x0f, 0xbd, 0xd7, 0xc5, 0x6d, 0x92, 0xe4, 0x2b, 0x2a,
+	0x4b, 0xb6, 0xa6, 0xe8, 0x0a, 0x82, 0x59, 0x9a, 0xa2, 0x23, 0xe3, 0x66, 0xff, 0xc5, 0x8c, 0x8f,
+	0xf7, 0x03, 0xcb, 0x82, 0xff, 0xff, 0xfa, 0xf3, 0xd7, 0x37, 0xff, 0x08, 0x43, 0x5c, 0x3e, 0x8e,
+	0x53, 0x9a, 0x6d, 0xc5, 0xdd, 0xa5, 0x77, 0x86, 0x5e, 0x42, 0x68, 0x43, 0x41, 0xc8, 0x3c, 0x39,
+	0x08, 0x77, 0x3c, 0x38, 0x98, 0xdd, 0x87, 0x24, 0xcd, 0x6f, 0x1a, 0xe9, 0x05, 0x34, 0xf4, 0xd1,
+	0x91, 0xa5, 0xae, 0xc5, 0x34, 0x3e, 0xa9, 0x4d, 0x1c, 0xc6, 0xc0, 0x60, 0xf4, 0x70, 0x4b, 0x63,
+	0x6c, 0x59, 0xae, 0x34, 0xc2, 0x35, 0x04, 0xa4, 0xe0, 0xce, 0xcc, 0xfe, 0xfe, 0xce, 0x4c, 0xed,
+	0x64, 0xf8, 0x81, 0x79, 0x3e, 0xc0, 0x7d, 0x23, 0xa1, 0xe0, 0xf1, 0x67, 0x1d, 0xca, 0x97, 0x4b,
+	0xef, 0xec, 0x63, 0x68, 0xfe, 0xe3, 0x4f, 0x7e, 0x07, 0x00, 0x00, 0xff, 0xff, 0xff, 0xe0, 0x64,
+	0xb3, 0x13, 0x04, 0x00, 0x00,
 }
